add camera & permission component

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "^0.1.5",
     "@react-navigation/native": "^5.0.6",
     "expo": "~36.0.0",
+    "expo-image-picker": "^8.0.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -25,7 +26,8 @@
     "react-navigation-stack": "^2.1.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "expo-permissions": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
