--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "expo-permissions": "~8.0.0"
+    "expo-permissions": "~8.0.0",
+    "expo-file-system": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
