--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "expo-permissions": "~8.0.0",
-    "expo-file-system": "~8.0.0"
+    "expo-file-system": "~8.0.0",
+    "expo-sqlite": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
