--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "redux-thunk": "^2.3.0",
     "expo-permissions": "~8.0.0",
     "expo-file-system": "~8.0.0",
-    "expo-sqlite": "~8.0.0"
+    "expo-sqlite": "~8.0.0",
+    "expo-location": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
