--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.5",
+    "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/native": "^5.0.6",
     "expo": "~36.0.0",
-    "expo-image-picker": "^8.0.2",
+    "expo-file-system": "~8.0.0",
+    "expo-image-picker": "~8.0.1",
+    "expo-location": "~8.0.0",
+    "expo-permissions": "~8.0.0",
+    "expo-sqlite": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
-    "react-native-safe-area-context": "^0.6.0",
-    "react-native-screens": "^2.0.0-beta.8",
+    "react-native-safe-area-context": "^0.6.4",
+    "react-native-screens": "^2.0.0-beta.10",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.1",
     "react-navigation-drawer": "^2.3.4",
@@ -26,11 +30,7 @@
     "react-navigation-stack": "^2.1.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "expo-permissions": "~8.0.0",
-    "expo-file-system": "~8.0.0",
-    "expo-sqlite": "~8.0.0",
-    "expo-location": "~8.0.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
